[gd_scene load_steps=5 format=3 uid="uid://bkmojggq10te6"]

[ext_resource type="Script" path="res://src/date/date_choice_option.gd" id="1_kyolu"]
[ext_resource type="FontFile" uid="uid://im85rm1hu4m8" path="res://data/assets/general/art/PoetsenOne-Regular.ttf" id="2_8qyrp"]
[ext_resource type="Texture2D" uid="uid://xvtogj4lsibc" path="res://data/assets/date/art/transparent_black_rounded_rect_8px9patch.png" id="2_l14wa"]
[ext_resource type="Texture2D" uid="uid://3f135cn7td4w" path="res://data/assets/date/art/pink_rounded_bottom.png" id="4_w1bfr"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_kyolu")

[node name="ChoiceButton" type="TextureButton" parent="."]
offset_right = 167.0
offset_bottom = 167.0
texture_normal = ExtResource("2_l14wa")
stretch_mode = 4

[node name="ChoiceLabel" type="Label" parent="ChoiceButton"]
layout_mode = 0
offset_left = 8.0
offset_right = 160.0
offset_bottom = 144.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("2_8qyrp")
theme_override_font_sizes/font_size = 20
text = "I once ran a class in Boise, Idaho. Trained a lot of people"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FooterBg" type="NinePatchRect" parent="ChoiceButton"]
layout_mode = 0
offset_top = 144.0
offset_right = 167.0
offset_bottom = 167.0
texture = ExtResource("4_w1bfr")
patch_margin_left = 8
patch_margin_right = 8
patch_margin_bottom = 8

[connection signal="pressed" from="ChoiceButton" to="." method="_on_choice_button_pressed"]
